fix: card browser is now visible on mobile again

--- a/src/pages/deck-builder-page/deck-builder-page.component.scss
+++ b/src/pages/deck-builder-page/deck-builder-page.component.scss
@@ -4,7 +4,7 @@
   display: flex;
 }
 
-#main-container {
+.card-browser-area {
   position: relative;
   height: 100%;
   overflow-y: auto;
